Написал тесты.