@@ -23,6 +23,7 @@ import ru.practicum.util.mapper.CommentMapper;
 import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -36,11 +37,9 @@ public class CommentServiceImpl implements CommentService {
 	@Transactional
 	public CommentDto updateCommentByAdmin(int commentId, NewCommentDto newCommentDto) throws DataNotFoundException {
 		CommentEntity commentToUpdate = commentRepository.findWithCommenterById(commentId).orElseThrow(
-				() -> new DataNotFoundException("Comment with id[" + commentId + " doesn't exist.")
+				() -> new DataNotFoundException("Comment with id[" + commentId + "] doesn't exist.")
 		);
-
 		setNewInfoForCommentByAdmin(commentToUpdate, newCommentDto);
-
 		return CommentMapper.entityToDto(commentRepository.save(commentToUpdate), commentToUpdate.getCommenter());
 	}
 
@@ -48,11 +47,9 @@ public class CommentServiceImpl implements CommentService {
 	@Transactional
 	public DeletedCommentDto deleteCommentByAdmin(int commentId) throws DataNotFoundException {
 		CommentEntity commentToDelete = commentRepository.findById(commentId).orElseThrow(
-				() -> new DataNotFoundException("Comment with id[" + commentId + " doesn't exist.")
+				() -> new DataNotFoundException("Comment with id[" + commentId + "] doesn't exist.")
 		);
-
 		commentRepository.delete(commentToDelete);
-
 		return CommentMapper.entityToDeletedDto(commentToDelete);
 	}
 
@@ -60,33 +57,27 @@ public class CommentServiceImpl implements CommentService {
 	@Transactional
 	public CommentDto getCommentByAdmin(int commentId) throws DataNotFoundException {
 		CommentEntity comment = commentRepository.findWithCommenterById(commentId).orElseThrow(
-				() -> new DataNotFoundException("Comment with id[" + commentId + " doesn't exist.")
+				() -> new DataNotFoundException("Comment with id[" + commentId + "] doesn't exist.")
 		);
-
 		return CommentMapper.entityToDto(comment, comment.getCommenter());
 	}
 
 	@Override
 	@Transactional
 	public List<CommentDto> getCommentsByAdmin(int eventId, String text, LocalDateTime start, LocalDateTime end,
-											   int from, int size) throws DataNotFoundException, BadRequestException {
+		int from, int size) throws DataNotFoundException, BadRequestException {
 		if (start != null && end != null)
 			if (start.isAfter(end))
 				throw new BadRequestException("Range start cannot be after range end.");
-
 		eventRepository.findById(eventId).orElseThrow(
 				() -> new DataNotFoundException("Event with id[" + eventId + "] doesn't exist.")
 		);
-
 		List<CommentEntity> comments = commentRepository.findWithCommenterBySearchParam(eventId, text, start, end,
 				Pagenator.getPageable(from, size));
-
 		List<CommentDto> commentsDto = comments.stream()
 				.map(comment -> CommentMapper.entityToDto(comment, comment.getCommenter()))
-				.toList();
-
-		sortCommentsByCreatedOn(commentsDto);
-
+				.collect(Collectors.toList());
+		sortCommentsDto(commentsDto);
 		return commentsDto;
 	}
 
@@ -97,19 +88,14 @@ public class CommentServiceImpl implements CommentService {
 		EventEntity event = eventRepository.findById(eventId).orElseThrow(
 				() -> new DataNotFoundException("Event with id[" + eventId + "] doesn't exist.")
 		);
-
 		if (event.getInitiator().getId().equals(userId))
 			throw new DataConflictException("Event initiator cannot add a comment.");
-
 		if (!event.getState().equals(EventState.PUBLISHED))
 			throw new DataConflictException("Event is unpublished.");
-
 		UserEntity commenter = userRepository.findById(userId).orElseThrow(
 				() -> new DataNotFoundException("User with id[" + userId + "] doesn't exist.")
 		);
-
 		CommentEntity commentToSave = CommentMapper.newCommentDtoToEntity(commenter, event, newCommentDto);
-
 		return CommentMapper.entityToDto(commentRepository.save(commentToSave), commenter);
 	}
 
@@ -120,16 +106,12 @@ public class CommentServiceImpl implements CommentService {
 		UserEntity commenter = userRepository.findById(userId).orElseThrow(
 				() -> new DataNotFoundException("User with id[" + userId + "] doesn't exist.")
 		);
-
 		CommentEntity commentToDelete = commentRepository.findWithCommenterById(commentId).orElseThrow(
 				() -> new DataNotFoundException("Comment with id[" + commentId + "] doesn't exist.")
 		);
-
 		if (!commentToDelete.getCommenter().getId().equals(commenter.getId()))
 			throw new DataConflictException("User is not commenter.");
-
 		commentRepository.delete(commentToDelete);
-
 		return CommentMapper.entityToDeletedDto(commentToDelete);
 	}
 
@@ -139,49 +121,39 @@ public class CommentServiceImpl implements CommentService {
 		userRepository.findById(userId).orElseThrow(
 				() -> new DataNotFoundException("User with id[" + userId + "] doesn't exist.")
 		);
-
 		CommentEntity comment = commentRepository.findWithCommenterById(commentId).orElseThrow(
 				() -> new DataNotFoundException("Comment with id[" + commentId + "] doesn't exist.")
 		);
-
 		return CommentMapper.entityToDto(comment, comment.getCommenter());
 	}
 
 	@Override
 	@Transactional
 	public List<CommentDto> getCommentsByUser(int userId, int eventId, String text, LocalDateTime start,
-											  LocalDateTime end, int from, int size) throws DataNotFoundException, BadRequestException {
+		LocalDateTime end, int from, int size) throws DataNotFoundException, BadRequestException {
 		if (start != null && end != null)
 			if (start.isAfter(end))
 				throw new BadRequestException("Range start cannot be after range end.");
-
 		userRepository.findById(userId).orElseThrow(
 				() -> new DataNotFoundException("User with id [" + userId + "]  doesn't exist.")
 		);
-
 		eventRepository.findById(eventId).orElseThrow(
 				() -> new DataNotFoundException("Event with id[" + eventId + "] doesn't exist.")
 		);
-
 		List<CommentEntity> comments = commentRepository.findWithCommenterBySearchParam(eventId, text, start, end,
 				Pagenator.getPageable(from, size));
-
 		List<CommentDto> commentsDto = comments.stream()
 				.map(comment -> CommentMapper.entityToDto(comment, comment.getCommenter()))
-				.toList();
-
-		sortCommentsByCreatedOn(commentsDto);
-
+				.collect(Collectors.toList());
+		sortCommentsDto(commentsDto);
 		return commentsDto;
+	}
+
+	private void sortCommentsDto(List<CommentDto> commentsDto) {
+		commentsDto.sort(Comparator.comparing(CommentDto::getCreatedOn));
 	}
 
 	private void setNewInfoForCommentByAdmin(CommentEntity commentToUpdate, NewCommentDto newCommentDto) {
 		commentToUpdate.setText(newCommentDto.getText());
-	}
-
-	private void sortCommentsByCreatedOn(List<CommentDto> comments) {
-		if (comments == null || comments.isEmpty() || comments.size() < 2)
-			return;
-		comments.sort(Comparator.comparing(CommentDto::getCreatedOn));
 	}
 }
